toolkit/xre/nsNativeAppSupportUnix.cpp
@@ -265,7 +265,8 @@ void nsNativeAppSupportUnix::DoInteract() {
         do_GetService("@mozilla.org/toolkit/app-startup;1");
 
     if (appService) {
-      appService->Quit(nsIAppStartup::eForceQuit);
+      bool userAllowedQuit = true;
+      appService->Quit(nsIAppStartup::eForceQuit, &userAllowedQuit);
     }
   } else {
     if (mClientState != STATE_SHUTDOWN_CANCELLED) {
@@ -353,7 +354,8 @@ void nsNativeAppSupportUnix::DieCB(SmcConn smc_conn, SmPointer client_data) {
       do_GetService("@mozilla.org/toolkit/app-startup;1");
 
   if (appService) {
-    appService->Quit(nsIAppStartup::eForceQuit);
+    bool userAllowedQuit = false;
+    appService->Quit(nsIAppStartup::eForceQuit, &userAllowedQuit);
   }
   // Quit causes the shutdown to begin but the shutdown process is asynchronous
   // so we can't DisconnectFromSM() yet
